--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,8 @@
         "nesbot/carbon": "^1.22",
         "barryvdh/laravel-dompdf": "^0.8.0",
         "facturama/facturama-php-sdk": "^2.0@dev",
-        "uxweb/sweet-alert": "^1.4"
+        "uxweb/sweet-alert": "^1.4",
+        "intervention/image": "^2.3"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
